Expand toy dataset to allow writing of datasets

--- a/toypages/dataset.html
+++ b/toypages/dataset.html
@@ -9,6 +9,7 @@
       <p>Upload a dataset to view it (csv/csv2/tab/space). Expects the files to have a header line.</p>
       <form id="aform">
          <input type="file" />
+         <a id="download" href="">Download it!</a>
       </form>
       <br />
       <table id="theTable">
