Make topypages folder self-sufficient

--- a/toypages/dataset.html
+++ b/toypages/dataset.html
@@ -20,7 +20,7 @@
          <tr><td>Foo</td><td>45</td></tr>
       </table>
       <script src="https://code.jquery.com/jquery-2.1.1.min.js"></script>
-      <script src="../bundle.js"></script>
+      <script src="bundle.js"></script>
       <script src="dataset.js"></script>
    </body>
 </html>
