--- a/toypages/variable.html
+++ b/toypages/variable.html
@@ -23,8 +23,7 @@
                <select id="varList">
                </select>
                <br />
-               <textarea rows="5">
-               </textarea><span id="mess"></span>
+               <textarea rows="5"></textarea><span id="mess"></span>
                <br />
                <input id="addVar" type="button" value="Create new variable" />
             </form>
@@ -37,7 +36,7 @@
          </div>
       </div>
       <script src="https://code.jquery.com/jquery-2.1.1.min.js"></script>
-      <script src="../bundle.js"></script>
+      <script src="bundle.js"></script>
       <script src="variable.js"></script>
    </body>
 </html>
